@@ -559,8 +559,10 @@ void setup_Rmainloop(void)
     if (!R_Quiet)
     {
         PrintGreeting();
+#ifndef SUPPORT_UTF8
         if (utf8locale)
-            R_ShowMessage("WARNING: UTF-8 locales are not currently supported\n");
+            R_ShowMessage("WARNING: UTF-8 locales are not supported in this build of R\n");
+#endif
     }
 
     R_LoadProfile(R_OpenSiteFile(), baseEnv);
